--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <title>My Professional Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-  <!-- Font Awesome CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
-
   <!-- Header Section -->
   <section id="header">
     <div class="container">
@@ -20,6 +18,8 @@
         <ul id="nav-links">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
+           <li><a href="#family">Family</a></li>
+           <li><a href="#Challenges">Challenges</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1" data-aos="fade-right">
-          <img src="images\ff.jpg" alt="Profile" />
+          <img src="images/ff.jpg" alt="Profile" />
         </div>
         <div class="about-col-2" data-aos="fade-left">
           <h1 class="sub-title">About Me</h1>
@@ -77,6 +77,20 @@
     </div>
   </section>
 
+
+
+<!----------------family----------------->
+    <section id="family" data-aos="fade-up">
+  <div class="container">
+    <h2>My Family</h2>
+    <p>
+      Family is the foundation of my strength and success. I come from a loving and supportive family who has always encouraged me to pursue my dreams. Their guidance, values, and unconditional love have played a major role in shaping who I am today.
+    </p>
+    <img src="images/fam.jpg" class="fam1" alt="Profile" />
+   
+  </div>
+</section>
+
   <!-- Services Section -->
   <section id="services">
     <div class="container">
@@ -104,13 +118,46 @@
     </div>
   </section>
 
+<!--------------challenges------------->
+
+ <section id="Challenges">
+  <h1 class="or">Challenges</h1>
+  <section class="challenge-section" data-aos="fade-up"> 
+     <div class="container">
+        <h2>Overcoming Life’s Obstacles</h2>
+        <p>
+          Throughout my journey, I have encountered many difficulties that tested my strength and determination. These challenges helped shape my resilience and taught me valuable life lessons.
+        </p>
+
+        <div class="challenge-card">
+          <h3>Academic Burnout</h3>
+          <p>
+            During my studies, the pressure to perform and meet expectations led to mental exhaustion. Through self-care and effective time management, I learned to find balance and recover.
+          </p>
+        </div>
+
+        <div class="challenge-card">
+          <h3>Financial Struggles</h3>
+          <p>
+            Limited resources taught me the importance of budgeting, gratitude, and the value of opportunities that come my way.
+          </p>
+        </div>
+
+        <div class="challenge-card">
+          <h3>Overcoming Self-Doubt</h3>
+          <p>
+            There were moments I questioned my abilities, but persistence, support from loved ones, and personal growth allowed me to push through.
+          </p>
+        </div>
+ </section>
+
   <!-- Portfolio Section -->
   <section id="portfolio">
     <div class="container">
       <h1 class="sub-title" data-aos="fade-up">My Work</h1>
       <div class="work-List" data-aos="zoom-in">
         <div class="work">
-          <img src="images\PROJECT 1.png" alt="Project 1" />
+          <img src="images/PROJECT 1.png" alt="Project 1" />
           <div class="layer">
             <h3>SH4RP STREETWEAR</h3>
             <p>Stay Sharp. Dress Ch4rp!<br>
@@ -121,7 +168,7 @@
           </div>
         </div>
         <div class="work">
-          <img src="images\proxy-image.jpeg" class="cafe" alt="Project 2"  />
+          <img src="images/proxy-image.jpeg" class="cafe" alt="Project 2"  />
           <div class="layer">
             <h3>Cafe Nutty</h3>
             <p>Your Café, Your Story – One Post at a Time!<br>
